--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.3.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-docgen-typescript-loader": "^3.7.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
@@ -28,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": [
