--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "async-validator": "4.2.5",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "react-transition-group": "^4.4.1",
