--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "liangship",
-  "version": "0.1.4",
+  "version": "1.1.4",
   "private": false,
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -107,6 +107,7 @@
     "react-docgen-typescript-loader": "^3.7.2",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "rimraf": "^5.0.1",
     "sass": "^1.32.8",
     "typescript": "^4.4.3",
     "web-vitals": "^1.0.1",
