--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -3,6 +3,7 @@
     "outDir": "dist",
     "module": "esnext",
     "target": "es5",
+    "skipLibCheck": true,
     "declaration": true,
     "moduleResolution": "node",
     "jsx": "react",
